--- a/src/app/home/fashion/fashion-one/fashion-one.component.html
+++ b/src/app/home/fashion/fashion-one/fashion-one.component.html
@@ -39,7 +39,8 @@
         <div class="col-lg-6 offset-lg-3">
             <div class="product-para">
                 <p class="text-center">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry, Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry, Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s.
                 </p>
             </div>
         </div>
@@ -50,11 +51,12 @@
         <div class="row">
             <div class="col">
                 <owl-carousel-o class="product-m no-arrow" [options]="ProductSliderConfig">
-                    <ng-container *ngFor="let product of products | slice:0:16">
+                    <ng-container *ngFor="let product of productskartselling | slice:0:16">
                         <ng-template carouselSlide>
                             <div class="product-box">
-                                <app-product-box-one [product]="product" [currency]="productService?.Currency" [thumbnail]="true" [cartModal]="true">
-                                </app-product-box-one>
+                                <app-product-box [productkart]="product" [currency]="productService?.Currency"
+                                    [thumbnail]="true">
+                                </app-product-box>
                             </div>
                         </ng-template>
                     </ng-container>
@@ -67,7 +69,8 @@
 
 <!-- Parallax banner start-->
 <section class="p-0">
-    <div class="full-banner parallax-banner1 parallax text-center p-left" [ngStyle]="{'background-image': 'url(assets/images/parallax/1.jpg)'}">
+    <div class="full-banner parallax-banner1 parallax text-center p-left"
+        [ngStyle]="{'background-image': 'url(assets/images/parallax/1.jpg)'}">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -94,13 +97,14 @@
             <div class="col theme-tab">
                 <ngb-tabset [justify]="'center'" [type]="'pills'" class="tabs tab-title">
                     <ngb-tab *ngFor="let collection of productCollections">
-                        <ng-template ngbTabTitle>{{collection}}</ng-template>
+                        <ng-template ngbTabTitle>{{collection.name}}</ng-template>
                         <ng-template ngbTabContent>
                             <div class="no-slider row">
                                 <ng-container *ngFor="let product of getCollectionProducts(collection) | slice:0:8">
                                     <div class="product-box">
-                                        <app-product-box-one [product]="product" [currency]="productService?.Currency" [thumbnail]="true" [cartModal]="true">
-                                        </app-product-box-one>
+                                        <app-product-box [productkart]="product" [currency]="productService?.Currency"
+                                            [thumbnail]="true" >
+                                        </app-product-box>
                                     </div>
                                 </ng-container>
                             </div>
