--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="'Dashboard'" [breadcrumb]="'Dashboard'"></app-breadcrumb>
+m<app-breadcrumb [title]="'Dashboard'" [breadcrumb]="'Dashboard'"></app-breadcrumb>
 <!-- section start -->
 <section class="section-b-space">
     <div class="container">
