--- a/src/app/shared/components/product/product-box-one/product-box-one.component.html
+++ b/src/app/shared/components/product/product-box-one/product-box-one.component.html
@@ -6,12 +6,15 @@
         </div>
         <div class="front">
             <a [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]">
-                <img [defaultImage]="ImageSrc ? ImageSrc : 'assets/images/product/placeholder.jpg'" [lazyLoad]="ImageSrc ? ImageSrc : product.images[0].src" class="img-fluid lazy-loading" alt="{{ product.images[0].alt }}" />
+                <img [defaultImage]="ImageSrc ? ImageSrc : 'assets/images/product/placeholder.jpg'"
+                    [lazyLoad]="ImageSrc ? ImageSrc : product.images[0].src" class="img-fluid lazy-loading"
+                    alt="{{ product.images[0].alt }}" />
             </a>
         </div>
         <div class="back" *ngIf="onHowerChangeImage">
             <a [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]">
-                <img [src]="ImageSrc ? ImageSrc : product.images[1].src" class="img-fluid lazy-loading" alt="{{ product.images[1].alt }}">
+                <img [src]="ImageSrc ? ImageSrc : product.images[1].src" class="img-fluid lazy-loading"
+                    alt="{{ product.images[1].alt }}">
             </a>
         </div>
         <ul class="product-thumb-list" *ngIf="thumbnail">
@@ -45,17 +48,19 @@
         <div>
             <bar-rating [rate]="5" [readOnly]="true"></bar-rating>
             <a [routerLink]="['/shop/product/left/sidebar/', product?.title.replace(' ', '-')]">
-                <h6>{{ product?.title | titlecase }}</h6>
+                <h6>{{ productkart?.productName | titlecase }}</h6>
             </a>
-            <p>{{ product?.description }}</p>
+            <p>{{ productkart?.description }}</p>
             <h4>
-                {{ product?.price * currency?.price | discount:product | currency:currency?.currency:'symbol' }}
-                <del *ngIf="product?.discount"><span class="money"> {{ product?.price * currency?.price | currency:currency?.currency:'symbol' }}</span></del>
+                {{ productkart?.salePrice  |  currency:currency?.currency:'symbol' }}
+                <del> <span class="money">
+                    {{ productkart?.price  | currency:currency?.currency:'symbol' }}</span></del>
             </h4>
-            <ul class="color-variant" *ngIf="Color(product?.variants).length">
-                <li [class]="color" *ngFor="let color of Color(product?.variants)" [ngStyle]="{'background-color': color}" (click)="ChangeVariants(color, product)">
+            <!-- <ul class="color-variant" *ngIf="Color(product?.variants).length">
+                <li [class]="color" *ngFor="let color of Color(product?.variants)"
+                    [ngStyle]="{'background-color': color}" (click)="ChangeVariants(color, product)">
                 </li>
-            </ul>
+            </ul> -->
         </div>
     </div>
 </div>
