--- a/src/app/shared/components/product/product-box-vertical-slider/product-box-vertical-slider.component.html
+++ b/src/app/shared/components/product/product-box-vertical-slider/product-box-vertical-slider.component.html
@@ -2,57 +2,65 @@
 <div class="theme-card">
     <h5 class="title-border">{{ title }}</h5>
     <owl-carousel-o [options]="NewProductSliderConfig" class="offer-slider">
-        <ng-container *ngFor="let product of products | slice:0:3 ">  
+        <ng-container *ngFor="let product of productskart | slice:0:3 ">
             <ng-template carouselSlide>
                 <div>
-                  <div class="media" *ngFor="let product of products | slice:0:3 ">
-                    <a [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]">
-                      <img class="img-fluid w-auto"
-                           [defaultImage]="'assets/images/product/placeholder.jpg'" 
-                           [lazyLoad]="product.images[0].src" alt="">
-                    </a>
-                    <div class="media-body align-self-center">
-                      <bar-rating [rate]="5" [readOnly]="true"></bar-rating>
-                      <a [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]">
-                      <h6>{{ product.title | titlecase }}</h6></a>
-                      <h4>
-                        {{ product?.price * productService.Currency?.price | discount:product | currency:productService.Currency?.currency:'symbol' }}
-                        <del *ngIf="product?.discount">
+                    <div class="media" *ngFor="let product of productskart | slice:0:3 ">
+                        <!-- <a [routerLink]="['/shop/product/left/sidebar/', product?.title.replace(' ', '-')]">
+                            <img class="img-fluid w-auto" [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="product.images[0].src" alt="">
+                        </a> -->
+
+
+                        <a (click)="GoToDetail(product.rowID,product?.productSizeId,product?.setType);">
+                            <img [defaultImage]="ImageSrc ? ImageSrc : 'assets/images/product/placeholder.jpg'" [lazyLoad]="ImageSrc ? ImageSrc : ProductImage+product.productID+'/frontImage/'+product.frontImage" class="img-fluid w-auto" alt="" />
+                        </a>
+
+                        <div class="media-body align-self-center">
+                            <bar-rating [rate]="5" [readOnly]="true"></bar-rating>
+                            <!-- <a [routerLink]="['/shop/product/left/sidebar/', product?.title?.replace(' ', '-')]"> -->
+                            <a href="javaScript:void(0);">
+                                <h6>{{ product?.productName | titlecase }}</h6>
+                            </a>
+                            <h4>
+                                {{ product?.salePrice | currency:productService.Currency?.currency:'symbol' }}
+                                <del *ngIf="product?.discount">
                           <span class="money"> 
-                            {{ product?.price * productService.Currency?.price | currency:productService.Currency?.currency:'symbol' }}
+                            {{ product?.price | currency:productService.Currency?.currency:'symbol' }}
                           </span>
                         </del>
-                      </h4>
+                            </h4>
+                        </div>
                     </div>
-                  </div>
                 </div>
             </ng-template>
             <ng-template carouselSlide>
                 <div>
-                  <div class="media" *ngFor="let product of products | slice:3:6 ">
-                    <a [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]">
-                      <img class="img-fluid w-auto" 
-                           [defaultImage]="'assets/images/product/placeholder.jpg'" 
-                           [lazyLoad]="product.images[0].src" alt="">
-                    </a>
-                    <div class="media-body align-self-center">
-                      <bar-rating [rate]="5" [readOnly]="true"></bar-rating>
-                      <a [routerLink]="['/shop/product/left/sidebar/', product.title.replace(' ', '-')]">
-                      <h6>{{ product.title | titlecase }}</h6></a>
-                      <h4>
-                        {{ product?.price * productService.Currency?.price | discount:product | currency:productService.Currency?.currency:'symbol' }}
-                        <del *ngIf="product?.discount">
+                    <div class="media" *ngFor="let product of productskart | slice:3:6 ">
+                        <!-- <a [routerLink]="['/shop/product/left/sidebar/', product?.title.replace(' ', '-')]">
+                            <img class="img-fluid w-auto" [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="product.images[0].src" alt="">
+                        </a> -->
+                        <a (click)="GoToDetail(product.rowID,product?.productSizeId,product?.setType);">
+                            <img [defaultImage]="ImageSrc ? ImageSrc : 'assets/images/product/placeholder.jpg'" [lazyLoad]="ImageSrc ? ImageSrc : ProductImage+product.productID+'/frontImage/'+product.frontImage" class="img-fluid w-auto" alt="" />
+                        </a>
+                        <div class="media-body align-self-center">
+                            <bar-rating [rate]="5" [readOnly]="true"></bar-rating>
+                            <!-- <a [routerLink]="['/shop/product/left/sidebar/', product?.title?.replace(' ', '-')]"> -->
+                            <a href="javaScript:void(0);">
+                                <h6>{{ product?.productName | titlecase }}</h6>
+                            </a>
+                            <h4>
+                                {{ product?.salePrice | currency:productService.Currency?.currency:'symbol' }}
+                                <del *ngIf="product?.discount">
                           <span class="money"> 
-                            {{ product?.price * productService.Currency?.price | currency:productService.Currency?.currency:'symbol' }}
+                            {{ product?.price | currency:productService.Currency?.currency:'symbol' }}
                           </span>
                         </del>
-                      </h4>
+                            </h4>
+                        </div>
                     </div>
-                  </div>
                 </div>
             </ng-template>
         </ng-container>
     </owl-carousel-o>
 </div>
 <!-- side-bar single product slider end -->
-  
