--- a/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
@@ -36,15 +36,12 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
-                                <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar
-                                    class="product-slick">
-                                    <ng-container
-                                        *ngFor="let image of productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
+                                <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar class="product-slick">
+                                    <ng-container *ngFor="let image of productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
                                         <ng-template carouselSlide [id]="i">
                                             <div>
 
-                                                <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                                                    [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                                                <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
                                                     [alt]="image.alt" class="img-fluid">
                                             </div>
                                         </ng-template>
@@ -54,14 +51,11 @@
                                     <!-- *ngIf="product?.images.length > 1" -->
                                     <div class="slider-nav">
                                         <owl-carousel-o [options]="ProductDetailsThumbConfig" class="product-slick">
-                                            <ng-container
-                                                *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
+                                            <ng-container *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
                                                 <ng-template carouselSlide [id]="i">
                                                     <div class="owl-thumb" [class.active]="i == activeSlide">
-                                                        <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                                                            [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
-                                                            [alt]="image.alt" class="img-fluid"
-                                                            (click)="owlCar.to(activeSlide1 = i.toString())">
+                                                        <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                                                            [alt]="image.alt" class="img-fluid" (click)="owlCar.to(activeSlide1 = i.toString())">
                                                     </div>
                                                 </ng-template>
                                             </ng-container>
@@ -81,9 +75,7 @@
                                         {{ productkart[0]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
                                     </h3>
                                     <ul class="color-variant">
-                                        <li [class]="color" [class.active]="activeSlide == i.toString()"
-                                            *ngFor="let color of Color(productkart[0]?.productSizeColor); index as i"
-                                            [ngStyle]="{'background-color': color}" (click)="changecolor(i.toString())">
+                                        <li [class]="color" [class.active]="activeSlide == i.toString()" *ngFor="let color of Color(productkart[0]?.productSizeColor); index as i" [ngStyle]="{'background-color': color}" (click)="changecolor(i.toString())">
                                         </li>
                                     </ul>
                                     <!-- <app-stock-inventory [stock]="productkart[0]?.qty"></app-stock-inventory> commented on 22 july by deepak -->
@@ -105,12 +97,9 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                <tr
-                                                    *ngFor="let item of productkart[0]?.productSizeColor; let myIndex  = index">
+                                                <tr *ngFor="let item of productkart[0]?.productSizeColor; let myIndex  = index">
                                                     <td>
-                                                        <input type="checkbox" [(ngModel)]="item.isSelected"
-                                                            name="checkIn" [value]="item.productSizeId" id="{{myIndex}}"
-                                                            (ngModelChange)="fnCheck(item,$event,myIndex)">
+                                                        <input type="checkbox" [(ngModel)]="item.isSelected" name="checkIn" [value]="item.productSizeId" id="{{myIndex}}" (ngModelChange)="fnCheck(item,$event,myIndex)">
                                                     </td>
                                                     <td>
                                                         {{item.color}}
@@ -130,11 +119,7 @@
                                                                         <i class="ti-angle-left"></i>
                                                                     </button>
                                                                 </span>
-                                                                <input type="text" name="quantity"
-                                                                    id="{{ 'txtqty' + myIndex}}"
-                                                                    style="width: 45px; height: 27px;"
-                                                                    class="form-control input-number"
-                                                                    [value]="item.selectedQty" disabled />
+                                                                <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}" style="width: 45px; height: 27px;" class="form-control input-number" [value]="item.selectedQty" disabled />
                                                                 <span class="input-group-prepend">
                                                                     <button type="button"
                                                                         class="btn quantity-right-plus" data-type="plus"
@@ -185,11 +170,9 @@
                     </div> -->
                                     </div>
                                     <div class="product-buttons">
-                                        <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="false"
-                                            (click)="addToCart(1)">add
+                                        <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="false" (click)="addToCart(1)">add
                                             to cart</a>
-                                        <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="false"
-                                            (click)="addToCart(2)">buy now</a>
+                                        <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="false" (click)="addToCart(2)">buy now</a>
                                     </div>
                                     <div class="border-product">
                                         <h6 class="product-title">product details</h6>
@@ -228,9 +211,7 @@
                                         <ng-template ngbTabTitle>Video</ng-template>
                                         <ng-template ngbTabContent>
                                             <div class="mt-3 text-center">
-                                                <iframe width="560" height="315"
-                                                    src="https://www.youtube.com/embed/BUWzX78Ye_8"
-                                                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                                <iframe width="560" height="315" src="https://www.youtube.com/embed/BUWzX78Ye_8" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                             </div>
                                         </ng-template>
                                     </ngb-tab>
