--- a/src/app/shop/collection/widgets/pagination/pagination.component.html
+++ b/src/app/shop/collection/widgets/pagination/pagination.component.html
@@ -1,4 +1,4 @@
-<div class="product-pagination" *ngIf="products.length">
+<div class="product-pagination" *ngIf="productskart.length">
     <div class="theme-paggination-block">
         <div class="container-fluid p-0">
             <div class="row">
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-xl-6 col-md-6 col-sm-12">
                     <div class="product-search-count-bottom">
-                        <h5>Showing Products 1-{{ products.length }} of {{ paginate.totalItems }} Result</h5>
+                        <h5>Showing Products 1-{{ productskart.length }} of {{ paginate.totalItems }} Result</h5>
                     </div>
                 </div>
             </div>
