--- a/src/app/home/fashion/fashion-one/fashion-one.component.html
+++ b/src/app/home/fashion/fashion-one/fashion-one.component.html
@@ -166,5 +166,5 @@
 </section>
 <!--  logo section End-->
 
-<app-newsletter></app-newsletter>
+<!-- <app-newsletter></app-newsletter> -->
 <app-footer-one></app-footer-one>
