--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -20,7 +20,8 @@
           <span class="sub-arrow" *ngIf="menuItem.children"></span>
         </a>
                 <!-- Link -->
-                <a href="{{menuItem.path}}" class="nav-link" *ngIf="menuItem.type === 'link'">
+        <a [routerLink]="menuItem.path" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link"
+          *ngIf="menuItem.type === 'link'">
           {{ menuItem.title }}
           <div class="lable-nav" *ngIf="menuItem.badge">{{ menuItem.badgeText | translate }}</div>
           <span class="sub-arrow" *ngIf="menuItem.children"></span>
