changes (MyAccount replace with name and change in dashboard)

--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
                 <div class="dashboard-right" *ngIf="ShowTabName=='AccountInfor'">
                     <div class="dashboard">
                         <div class="page-title">
-                            <h2>My Dashboard</h2>
+                            <h2>My Account</h2>
                         </div>
                         <div class="welcome-msg">
                             <p>Hello, {{LoggedInUser[0].name}}!</p>
@@ -77,7 +77,7 @@
                 <div class="dashboard-right" *ngIf="ShowTabName=='Address'">
                     <div class="dashboard">
                         <div class="page-title">
-                            <h2>My Address</h2>
+                            <h2>My Addresses</h2>
                         </div>
 
                         <div class="box-account box-info">
