--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -4,7 +4,7 @@
         <div class="checkout-page">
             <div class="checkout-form">
                 <form>
-                    <h6 *ngIf="lstBillingAddress?.length>0">Billing Address</h6>
+                    <h6 *ngIf="lstBillingAddress?.length>0">Delivery Address</h6>
                     <div class="row">
                         <div class="col-sm-3" *ngFor="let lstBilling of lstBillingAddress">
                             <address>
@@ -21,8 +21,12 @@
                                 <br>
                                 <b>Mobile No:</b> {{lstBilling.phone}}
                                 <br>
-                                <a href="javascript:void(0)" (click)="SelectBillingAddress(lstBilling)">Select
-                                    Address</a>
+                                <!-- <a href="javascript:void(0)" (click)="SelectBillingAddress(lstBilling)">Select
+                                    Address</a> -->
+                                    <button type="submit" class="btn-solid" (click)="SelectBillingAddress(lstBilling)">
+                                        Deliver to this address
+                                    </button>
+
                             </address>
                             <hr>
                         </div>
@@ -30,7 +34,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-sm-12 col-xs-12">
                             <div class="checkout-title">
-                                <h3>Billing Details</h3>
+                                <h3>Delivery Address</h3>
                             </div>
                             <div class="row check-out">
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
