--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -9,8 +9,8 @@
                         <div class="collection-filter-block">
                             <div class="collection-mobile-back" (click)="toggleMobileSidebar()">
                                 <span class="filter-back">
-                  <i class="fa fa-angle-left" aria-hidden="true"></i> back
-                </span>
+                                    <i class="fa fa-angle-left" aria-hidden="true"></i> back
+                                </span>
                             </div>
                             <app-categories></app-categories>
                         </div>
@@ -29,39 +29,41 @@
                             <div class="col-xl-12">
                                 <div class="filter-main-btn mb-2">
                                     <span class="filter-btn" (click)="toggleMobileSidebar()">
-                    <i class="fa fa-bars" aria-hidden="true"></i> sidebar
-                  </span>
+                                        <i class="fa fa-bars" aria-hidden="true"></i> sidebar
+                                    </span>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
-                                <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar class="product-slick">
-                                    <!-- <ng-container
-                    *ngFor="let image of productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
-                    <ng-template carouselSlide [id]="i">
-                      <div>
-                        <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                          [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
-                          [alt]="image.alt" class="img-fluid">
-                      </div>
-                    </ng-template>
-                  </ng-container> -->
+                                <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar
+                                    class="product-slick">
+                                    <ng-container
+                                        *ngFor="let image of productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i">
+                                        <ng-template carouselSlide [id]="i">
+                                            <div>
+                                                <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                                                    [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
+                                                    [alt]="image.alt" class="img-fluid">
+                                            </div>
+                                        </ng-template>
+                                    </ng-container>
                                 </owl-carousel-o>
                                 <div class="col-12 p-0">
 
                                     <div class="slider-nav">
                                         <owl-carousel-o [options]="ProductDetailsThumbConfig" class="product-slick">
-                                            <!-- <ng-container
-                        *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
-                        <ng-template carouselSlide [id]="i">
-                          <div class="owl-thumb" [class.active]="i == activeSlide">
-                            <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                              [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
-                              [alt]="image.alt" class="img-fluid" (click)="owlCar.to(activeSlide = i.toString())">
-                          </div>
-                        </ng-template>
-                      </ng-container> -->
+                                            <ng-container
+                                                *ngFor="let image of  productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i">
+                                                <ng-template carouselSlide [id]="i">
+                                                    <div class="owl-thumb" [class.active]="i == activeSlide">
+                                                        <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                                                            [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
+                                                            [alt]="image.alt" class="img-fluid"
+                                                            (click)="owlCar.to(activeSlide = i.toString())">
+                                                    </div>
+                                                </ng-template>
+                                            </ng-container>
                                         </owl-carousel-o>
                                     </div>
                                 </div>
@@ -87,10 +89,11 @@
 
                                         <div class="size-box">
                                             <ul>
-                                                <li [class.active]="selectedSize == list" *ngFor="let list of SetList(productkart[0]?.productSizeSet)">
-                                                    <a href="javascript:void(0)" (click)="selectSize(list)">
-                            {{ list }}
-                          </a>
+                                                <li [class.active]="selectedSize == list"
+                                                    *ngFor="let list of SetList(productkart[0]?.productSizeSet);index as i">
+                                                    <a href="javascript:void(0)" (click)="selectSize(i)">
+                                                        {{ list }}
+                                                    </a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -98,8 +101,9 @@
                                         <h6 class="product-title size-text">
                                             select set
                                             <span>
-                        <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size chart</a>
-                      </span>
+                                                <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size
+                                                    chart</a>
+                                            </span>
                                         </h6>
 
                                         <table class="table table-bordered table-hover">
@@ -120,12 +124,15 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                <tr *ngFor="let item of productkart[0]?.productSizeSet; let myIndex  = index">
+                                                <tr
+                                                    *ngFor="let item of productkart[0]?.productSizeSet; let myIndex  = index">
                                                     <!-- <td>
                             <input type="checkbox" [(ngModel)]="item.isSelected"   [value]="item.setNo" name="checkIn" id="{{myIndex}}">
                           </td> -->
                                                     <td>
-                                                        <input type="checkbox" style="margin-top: 5px;" [(ngModel)]="item.isSelected" [value]="item.setNo" name="checkIn" id="{{myIndex}}"> {{item.setNo}}
+                                                        <input type="checkbox" style="margin-top: 5px;"
+                                                            [(ngModel)]="item.isSelected" [value]="item.setNo"
+                                                            name="checkIn" id="{{myIndex}}"> {{item.setNo}}
                                                     </td>
 
                                                     <td>
@@ -133,18 +140,25 @@
                                                         <div class="qty-box" style="margin-top: 0px !important;">
                                                             <div class="input-group">
                                                                 <span class="input-group-prepend">
-                                  <button type="button" class="btn quantity-left-minus" data-type="minus"
-                                    (click)="decrement(myIndex,item)">
-                                    <i class="ti-angle-left"></i>
-                                  </button>
-                                </span>
-                                                                <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}" style="width: 45px; height: 27px;" class="form-control input-number" [value]="item.selectedQty" disabled />
+                                                                    <button type="button"
+                                                                        class="btn quantity-left-minus"
+                                                                        data-type="minus"
+                                                                        (click)="decrement(myIndex,item)">
+                                                                        <i class="ti-angle-left"></i>
+                                                                    </button>
+                                                                </span>
+                                                                <input type="text" name="quantity"
+                                                                    id="{{ 'txtqty' + myIndex}}"
+                                                                    style="width: 45px; height: 27px;"
+                                                                    class="form-control input-number"
+                                                                    [value]="item.selectedQty" disabled />
                                                                 <span class="input-group-prepend">
-                                  <button type="button" class="btn quantity-right-plus" data-type="plus"
-                                    (click)="increment(myIndex,item,item.qty)">
-                                    <i class="ti-angle-right"></i>
-                                  </button>
-                                </span>
+                                                                    <button type="button"
+                                                                        class="btn quantity-right-plus" data-type="plus"
+                                                                        (click)="increment(myIndex,item,item.qty)">
+                                                                        <i class="ti-angle-right"></i>
+                                                                    </button>
+                                                                </span>
                                                             </div>
                                                         </div>
                                                     </td>
@@ -188,9 +202,11 @@
                     </div> -->
                                     </div>
                                     <div class="product-buttons">
-                                        <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="false" (click)="addToCart(1)">add
-                      to cart</a>
-                                        <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="false" (click)="addToCart(2)">buy now</a>
+                                        <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="false"
+                                            (click)="addToCart(1)">add
+                                            to cart</a>
+                                        <a href="javascrip:void(0)" class="btn btn-solid" [class.disabled]="false"
+                                            (click)="addToCart(2)">buy now</a>
                                     </div>
                                     <div class="border-product">
                                         <h6 class="product-title">product details</h6>
@@ -202,9 +218,9 @@
                                             <app-social></app-social>
                                             <form class="d-inline-block">
                                                 <button class="wishlist-btn" (click)="addToWishlist(productkart[0])">
-                          <i class="fa fa-heart"></i>
-                          <span class="title-font">Add To WishList</span>
-                        </button>
+                                                    <i class="fa fa-heart"></i>
+                                                    <span class="title-font">Add To WishList</span>
+                                                </button>
                                             </form>
                                         </div>
                                     </div>
@@ -229,7 +245,9 @@
                                         <ng-template ngbTabTitle>Video</ng-template>
                                         <ng-template ngbTabContent>
                                             <div class="mt-3 text-center">
-                                                <iframe width="560" height="315" src="https://www.youtube.com/embed/BUWzX78Ye_8" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                                <iframe width="560" height="315"
+                                                    src="https://www.youtube.com/embed/BUWzX78Ye_8"
+                                                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                             </div>
                                         </ng-template>
                                     </ngb-tab>
