--- a/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar/product-left-sidebar.component.html
@@ -1,5 +1,6 @@
 <app-breadcrumb [title]="productkart[0]?.productName" [breadcrumb]="'Product'"></app-breadcrumb>
 <!-- section start -->
+<!-- {{productkart[0]|json}} -->
 <section class="section-b-space">
     <div class="collection-wrapper">
         <div class="container">
@@ -34,6 +35,7 @@
                                 </div>
                             </div>
                         </div>
+                       
                         <div class="row">
                             <div class="col-lg-6">
                                 <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar
@@ -83,9 +85,10 @@
                                         {{ productkart[0]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
                                     </h3>
                                     <ul class="color-variant">
-                                        <li [class]="color" [class.active]="activeSlide == i.toString()"
+                                        <li [class]="color" [class.active]="activeSlide == color.colorindex.toString()"
                                             *ngFor="let color of Color(productkart[0]?.productSizeColor); index as i"
-                                            [ngStyle]="{'background-color': color}" (click)="changecolor(i.toString())">
+                                            [ngStyle]="{'background-color': color.color}"
+                                            (click)="changecolor(color.colorindex.toString())">
                                         </li>
                                     </ul>
                                     <!-- <app-stock-inventory [stock]="productkart[0]?.qty"></app-stock-inventory> commented on 22 july by deepak -->
@@ -112,7 +115,8 @@
                                                     *ngFor="let item of productkart[0]?.productSizeColor; let myIndex  = index">
                                                     <td>
                                                         <input type="checkbox" [(ngModel)]="item.isSelected"
-                                                            name="checkIn" [value]="item.productSizeId" id="{{myIndex}}"
+                                                            *ngIf="item?.qty > 0" name="checkIn"
+                                                            [value]="item.productSizeId" id="{{myIndex}}"
                                                             (ngModelChange)="fnCheck(item,$event,myIndex)">
                                                     </td>
                                                     <td>
@@ -124,7 +128,7 @@
                                                     <td>
 
                                                         <div class="qty-box" style="margin-top: 0px !important;">
-                                                            <div class="input-group">
+                                                            <div *ngIf="item?.qty > 0" class="input-group">
                                                                 <span class="input-group-prepend">
                                                                     <button type="button"
                                                                         class="btn quantity-left-minus"
@@ -146,6 +150,8 @@
                                                                     </button>
                                                                 </span>
                                                             </div>
+                                                            <h5 class="avalibility" *ngIf="item?.qty==0"><span>Out of
+                                                                    Stock</span></h5>
                                                         </div>
                                                     </td>
                                                     <!-- <td>
@@ -196,7 +202,9 @@
                                     </div>
                                     <div class="border-product">
                                         <h6 class="product-title">product details</h6>
-                                        <p>{{ productkart[0]?.shortDetails }}</p>
+                                        <div class="blog-post"
+                                            [innerHTML]="productkart[0]?.shortDetails | safe: 'html'"></div>
+                                        <!-- <p inner>{{ productkart[0]?.shortDetails }}</p> -->
                                     </div>
                                     <div class="border-product">
                                         <h6 class="product-title">share it</h6>
@@ -224,15 +232,21 @@
                                     <ngb-tab>
                                         <ng-template ngbTabTitle>Description</ng-template>
                                         <ng-template ngbTabContent>
-                                            <p>{{productkart[0]?.description }}</p>
+                                            <div class="blog-post"
+                                                [innerHTML]="productkart[0]?.description | safe: 'html'"></div>
+                                            <!-- <p>{{productkart[0]?.description }}</p> -->
                                         </ng-template>
                                     </ngb-tab>
                                     <ngb-tab>
                                         <ng-template ngbTabTitle>Video</ng-template>
                                         <ng-template ngbTabContent>
+
                                             <div class="mt-3 text-center">
-                                                <iframe width="560" height="315"
+                                                <!-- <iframe width="560" height="315"
                                                     src="https://www.youtube.com/embed/BUWzX78Ye_8"
+                                                      allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+                                                <iframe width="560" height="315"
+                                                    [src]="productkart[0]?.videoURL | safe: 'resourceUrl'"
                                                     allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                             </div>
                                         </ng-template>
