--- a/src/assets/scss/theme/_style.scss
+++ b/src/assets/scss/theme/_style.scss
@@ -5255,7 +5255,7 @@ footer {
         ul {
             li {
                 &.active {
-                    background-color: #fff;
+                    background-color: #f1afaf;
                     -webkit-box-shadow: 1px 1px 3px #77777769;
                     -moz-box-shadow: 1px 1px 3px #77777769;
                     box-shadow: 1px 1px 3px #77777769;
