--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -285,10 +285,10 @@
                                                                                 id="a-autoid-3-announce">
                                                                                 Track package
                                                                             </a></span></span>
-                                                                    <span class="a-button a-button-normal a-spacing-mini a-button-base" id="a-autoid-4"><span class="a-button-inner"><a id="Cancel-items_1"
+                                                                    <!-- <span class="a-button a-button-normal a-spacing-mini a-button-base" id="a-autoid-4"><span class="a-button-inner"><a id="Cancel-items_1"
                                                                                 class="a-button-text" role="button">
                                                                                 Cancel items
-                                                                            </a></span></span>
+                                                                            </a></span></span> -->
                                                                 </div>
                                                             </div>
                                                         </div>
