--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -60,19 +60,19 @@
                             <td>
                                 <div class="qty-box">
                                     <div class="input-group">
-                                        <!-- <span class="input-group-prepend">
+                                        <span class="input-group-prepend">
                                             <button type="button" class="btn quantity-left-minus" data-type="minus"
                                                 (click)="decrement(product)">
                                                 <i class="ti-angle-left"></i>
                                             </button>
-                                        </span> -->
+                                        </span>
                                         <input type="text" name="quantity" class="form-control input-number" disabled [(ngModel)]="product.quantity">
-                                        <!-- <span class="input-group-prepend">
+                                        <span class="input-group-prepend">
                                             <button type="button" class="btn quantity-right-plus" data-type="plus"
                                                 (click)="increment(product)">
                                                 <i class="ti-angle-right"></i>
                                             </button>
-                                        </span> -->
+                                        </span>
                                     </div>
                                 </div>
                             </td>
