after registration go to home page pending status then show this msg "you login is pending.please wait for approval" when click on login page remove expected deviler date from order success page remove track button change red to balck coor in my order page item name caital ship to - Ship To

--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -170,7 +170,7 @@
                                                                 <div class="a-column a-span2">
                                                                     <div class="a-row a-size-mini">
                                                                         <span class="a-color-secondary label" style="font-weight: 700;">
-                                                                            Ship to
+                                                                            Ship To
                                                                         </span>
                                                                     </div>
                                                                     <div class="a-row a-size-base">
@@ -245,9 +245,12 @@
                                                                         </div>
                                                                         <div class="a-fixed-left-grid-col a-col-right" style="padding-left:1.5%;float:left;">
                                                                             <div class="a-row">
-                                                                                <a class="a-link-normal">
+                                                                                <!-- <a class="a-link-normal">
                                                                                     {{lstPro.productName}}
-                                                                                </a>
+                                                                                </a> -->
+                                                                                <span class="a-size-small a-color-primary">
+                                                                                    {{lstPro.productName}}
+                                                                                </span>
                                                                             </div>
                                                                             <div class="a-row">
                                                                                 <span class="a-size-small a-color-secondary">
@@ -280,11 +283,11 @@
                                                         <div class="a-fixed-right-grid-col a-col-right" style="width:230px;margin-right:-230px;float:left;">
                                                             <div class="a-row">
                                                                 <div class="a-button-stack">
-                                                                    <span class="a-button a-button-primary track-package-button" id="a-autoid-3"><span class="a-button-inner"><a
+                                                                    <!-- <span class="a-button a-button-primary track-package-button" id="a-autoid-3"><span class="a-button-inner"><a
                                                                                 class="a-button-text" role="button"
                                                                                 id="a-autoid-3-announce">
                                                                                 Track package
-                                                                            </a></span></span>
+                                                                            </a></span></span> -->
                                                                     <!-- <span class="a-button a-button-normal a-spacing-mini a-button-base" id="a-autoid-4"><span class="a-button-inner"><a id="Cancel-items_1"
                                                                                 class="a-button-text" role="button">
                                                                                 Cancel items
