--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -39,32 +39,65 @@
 <section class="section-b-space" *ngIf="orderDetails?.length>0">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-12">
+                <div class="row order-success-sec">
+                    <div class="col-sm-4">
+                        <h4>summery</h4>
+                        <ul class="order-detail">
+                            <li>order ID: {{ orderDetails[0].orderNumber }}</li>
+                            <li>Order Date: {{ orderDetails[0].orderDate | date : 'MMM dd, yyyy'}}</li>
+                            <li>Order Total: {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4">
+                        <h4>shipping address</h4>
+                        <ul class="order-detail">
+                            <li>{{ orderDetails[0].address }}</li>
+                            <li>{{ orderDetails[0].state }}</li>
+                            <li>{{ orderDetails[0].country }}, {{ orderDetails[0].zipCode }}</li>
+                            <li>Contact No. {{ orderDetails[0].phone }}</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-sm-4 payment-mode">
+                        <h4>payment method</h4>
+                        <p>Pay on Delivery (Cash/Card). Cash on delivery (COD) available. Card/Net banking acceptance subject to device availability.</p>
+                    </div>
+                    <!-- <div class="col-md-12">
+                        <div class="delivery-sec">
+                            <h3>expected date of delivery</h3>
+                            <h2>{{ orderDetails[0].orderDate | date : 'MMM dd, yyyy' }}</h2>
+                        </div>
+                    </div> -->
+                </div>
+            </div>
+            <div class="col-lg-12">
                 <div class="product-order">
                     <h3>your order details</h3>
                     <div class="row product-order-detail">
-                        <div class="col-4 order_detail">
+                        <div class="col-3 order_detail">
                             <h4>Product Image</h4>
                         </div>
-                        <div class="col-4 order_detail">
+                        <div class="col-6 order_detail">
                             <h4>product name</h4>
                         </div>
                         <div class="col-1 order_detail">
                             <h4>Qty</h4>
                         </div>
-                        <div class="col-3 order_detail">
+                        <div class="col-2 order_detail">
                             <h4>price</h4>
                         </div>
                     </div>
                     <div class="row product-order-detail" *ngFor="let product of orderDetails[0].orderDetails">
-                        <div class="col-4">
+                        <div class="col-3">
                             <!-- <img [src]="product.productImg[0]" alt="" class="img-fluid"> -->
                             <!-- <img [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]"
                                 class="img-fluid"> -->
                             <img *ngIf="product?.setNo>0" [src]="ProductImage+product?.productId+'/productSetImage/'+product?.setNo+'/'+product?.productImg[0]" class="img-fluid">
                             <img *ngIf="product?.setNo==0" [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]" class="img-fluid">
                         </div>
-                        <div class="col-4 order_detail">
+                        <div class="col-6 order_detail">
                             <div>
                                 <!-- <h4>product name</h4> -->
                                 <h5>{{ product?.productName }}</h5>
@@ -76,7 +109,7 @@
                                 <h5>{{ product.quantity }}</h5>
                             </div>
                         </div>
-                        <div class="col-3 order_detail">
+                        <div class="col-2 order_detail">
                             <div>
                                 <!-- <h4>price</h4> -->
                                 <h5>{{ product?.price | currency:productService?.Currency.currency:'symbol' }}
@@ -104,39 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <div class="row order-success-sec">
-                    <div class="col-sm-6">
-                        <h4>summery</h4>
-                        <ul class="order-detail">
-                            <li>order ID: {{ orderDetails[0].orderNumber }}</li>
-                            <li>Order Date: {{ orderDetails[0].orderDate | date : 'MMM dd, yyyy'}}</li>
-                            <li>Order Total: {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-6">
-                        <h4>shipping address</h4>
-                        <ul class="order-detail">
-                            <li>{{ orderDetails[0].address }}</li>
-                            <li>{{ orderDetails[0].state }}</li>
-                            <li>{{ orderDetails[0].country }}, {{ orderDetails[0].zipCode }}</li>
-                            <li>Contact No. {{ orderDetails[0].phone }}</li>
-                        </ul>
-                    </div>
 
-                    <div class="col-sm-12 payment-mode">
-                        <h4>payment method</h4>
-                        <p>Pay on Delivery (Cash/Card). Cash on delivery (COD) available. Card/Net banking acceptance subject to device availability.</p>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="delivery-sec">
-                            <h3>expected date of delivery</h3>
-                            <h2>{{ orderDetails[0].orderDate | date : 'MMM dd, yyyy' }}</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
         </div>
     </div>
