--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -11,8 +11,9 @@
                                 <span class="filter-back">
                                     <i class="fa fa-angle-left" aria-hidden="true"></i> back
                                 </span>
-                            </div>
-                            <app-categories></app-categories>
+                            </div> 
+                            <!-- commented on 12 aug 2020 -->
+                            <!-- <app-categories></app-categories> -->
                         </div>
                         <div class="collection-filter-block">
                             <app-services></app-services>
